--- a/02-colors/index.html
+++ b/02-colors/index.html
@@ -10,23 +10,61 @@
   <body>
     <!-- Default colors -->
     <!-- white, black, red, green, blue, orange, yellow, purple, lime, emerald, teal, cyan, indigo, violet, fuchsia, pink, rose, sky, gray, slate, zinc, neutral, stone, amber,  -->
-
     <!-- Text Colors -->
+    <p class="text-black">Tailwind is awesome</p>
+    <p class="text-white">Tailwind is awesome</p>
+    <p class="text-red-500">Tailwind is awesome</p>
+    <p class="text-emerald-500">Tailwind is awesome</p>
+    <p class="text-zinc-500">Tailwind is awesome</p>
+    <p class="text-slate-500">Tailwind is awesome</p>
 
+    <!-- Background Colors -->
+    <p class="bg-slate-800 text-yellow-200">Tailwind awesome</p>
+    <p class="bg-emerald-400">Tailwind awesome</p>
+    <p class="bg-zinc-300">Tailwind awesome</p>
+    <p class="bg-tellow-500">Tailwind awesome</p>
+    <p class="bg-indigo-500 text-white">Tailwind awesome</p>
     <!-- Background Colors -->
 
     <!-- Text Underline -->
-
+    <p class="underline">Tailwind is awesome</p>
+    <p class="underline decoration-red-500">Tailwind is awesome</p>
+    <p class="underline decoration-indigo-500">Tailwind is awesome</p>
+    <p class="underline decoration-tellow-500">Tailwind is awesome</p>
+    <p class="underline decoration-zinc-500">Tailwind is awesome</p>
     <!-- Border Colors -->
+    <input type="text" class="border border-blau-400" />
+    <input type="text" class="border border-green-400" />
+    <input type="text" class="border border-orange-400" />
 
     <!-- Divide Colors -->
 
+    <div class="divide-y divide-black">
+      <div class="">Izen 1</div>
+      <div class="">Izen 2</div>
+      <div class="">Izen 3</div>
+      <div class="">Izen 4</div>
+      <div class="">Izen 5</div>
+    </div>
     <!-- Outline Colors -->
-
+    <button class="outline outline-red-500 rounded-md">Button</button>
+    <button class="outline outline-blue-500 rounded-md">Button</button>
+    <button class="outline outline-green-500 rounded-md">Button</button>
     <!-- Box Shadow Colors (Opacity defaults to 100, but you can set it)-->
-
+    <button class="shadow-lg bg-cyan-500 shadow-cyan-500">
+      Button with shadow
+    </button>
     <!-- Accent Colors -->
+    <button class="shadow-lg bg-cyan-500 shadow-cyan-500/40">
+      Button with shadow
+    </button>
+    <!-- Accent Colors -->
+    <input type="checkbox" class="accent-purple-500" checked />
+    <input type="checkbox" class="accent-cyan-500 ml-1" checked />
 
     <!-- Arbitrary Colors -->
+    <div class="bg-[#812fab]">Arbitrary Colors</div>
+    <div class="bg-[rgb(255,0,0)]">Arbitrary Colors</div>
+    <div class="bg-[steelblue]">Arbitrary Colors</div>
   </body>
 </html>
