--- a/03-container-spacing/index.html
+++ b/03-container-spacing/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Container -->
-    <div>
+    <div class="container mx-auto">
       <article>
         <h3>Article One</h3>
         <p>
@@ -21,11 +21,41 @@
       </article>
 
       <!-- Margin -->
-
+      <div class="bg-slate-200 m-4">m-4</div>
+      <div class="bg-slate-200 ml-4">ml-4</div>
+      <div class="bg-slate-200 mr-4">mr-4</div>
+      <div class="bg-slate-200 mt-4">mt-4</div>
+      <div class="bg-slate-200 mb-4">mb-4</div>
+      <div class="bg-slate-200 my-4">my-4</div>
+      <div class="bg-slate-200 mx-4">mx-4</div>
+      <div class="bg-slate-200 mt-[20px]">mt[20px]</div>
       <!-- Padding -->
+      <div class="bg-cyan-200 m-1 p-4">p-4</div>
+      <div class="bg-cyan-200 m-1 pl-4">pl-4</div>
+      <div class="bg-cyan-200 m-1 pr-4">pr-4</div>
+      <div class="bg-cyan-200 m-1 pt-4">pt-4</div>
+      <div class="bg-cyan-200 m-1 pb-4">pb-4</div>
+      <div class="bg-cyan-200 m-1 py-4">py-4</div>
+      <div class="bg-cyan-200 m-1 px-4">px-4</div>
+      <div class="bg-cyan-200 m-1 pt-[20px]">pt[20px]</div>
 
       <!-- Space Between X -->
-
+      <div class="flex space-x-14">
+        <div class="flex mt-10 space-x-4">
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
+        </div>
+        <div class="flex flex-col mt-10 space-y-4">
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
+        </div>
+      </div>
       <!-- Space Between Y -->
     </div>
   </body>
