--- a/04-typography/index.html
+++ b/04-typography/index.html
@@ -5,26 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {};
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
-
+    <div class="font-sans">Font sans</div>
+    <div class="font-serif">Font serif</div>
+    <div class="font-mono">Font mono</div>
     <!-- Font Size -->
-
+    <div class="text-xs">text-xs</div>
+    <div class="text-sm">text-sm</div>
+    <div class="text-base">text-base</div>
+    <div class="text-lg">text-lg</div>
+    <div class="text-xl">text-xl</div>
+    <div class="text-2xl">text-2xl</div>
+    <div class="text-3xl">text-3xl</div>
     <!-- Font Weight -->
+    <div class="font-light">font-light</div>
+    <div class="font-normal">font-normal</div>
+    <div class="font-medium">font-medium</div>
+    <div class="font-semibold">semibold</div>
+    <div class="font-bold">bold</div>
 
     <!-- Letter Spacing -->
-
+    <div class="tracking-tight">trecking-tight</div>
+    <div class="tracking-normal">trecking-normal</div>
+    <div class="tracking-wide">trecking-wide</div>
     <!-- Text Alignment -->
-
+    <div class="text-left">text-left</div>
+    <div class="text-right">text-right</div>
+    <div class="text-center">text-center</div>
     <!-- Text Decoration -->
-
+    <div class="underline decoration-4">underline deco-4</div>
+    <div class="underline decoration-4">underline deco-3</div>
+    <div class="underline decoration-2 decoration-blue-400">
+    <div class="underline decoration-2 decoration-double">
+      underline deco-2
+    </div>
+    
     <!-- Decoration Style -->
+    <div class="underline decoration-dashed">underline dashed</div>
+    <div class="underline decoration-dotted">underline  dotted</div>
+    <div class="underline decoration-dotted">underline  dotted</div>
 
     <!-- Decoration Offset -->
-
+    <div class="underline decoration-4 decoration-blue-400 underline-offset-8">underline  dotted</div>
+    <div class="underline decoration-4 decoration-blue-400 underline-offset-8">underline  dotted</div>
+    <div class="underline decoration-4 decoration-blue-400 underline-offset-8">underline  dotted</div>
+   
     <!-- Text Transform -->
+    <div class="normal-case">normal-case</div>
+    <div class="uppercase">uppercase</div>
+    <div class="lowercase">Lowercase</div>
+    <div class="capitalize">capitalize all words</div>
+
   </body>
 </html>
 
