--- a/05-sizing/index.html
+++ b/05-sizing/index.html
@@ -9,26 +9,48 @@
   </head>
   <body>
     <!-- Width -->
-
+    <div class="bg-black text-white w-1">width-1</div>
+    <div class="bg-black text-white w-12">width-12</div>
+    <div class="bg-black text-white w-96">width-96</div>
     <!-- Percentages -->
-
+    <div class="bg-green-700 text-white w-1/4">1/4</div>
+    <div class="bg-green-700 text-white w-1/3">1/3</div>
+    <div class="bg-green-700 text-white w-1/2">1/2</div>
     <!-- Width of the viewport -->
+    <div class="bg-blue-700 text-white w-screen">w-screen</div>
 
     <!-- 100% of container -->
+    <div class="bg-yellow-600 text-white w-full">w-full</div>
 
     <!-- min/max content -->
 
     <!-- Arbitrary width -->
+    <div class="bg-pink-700 text-white w-[300px]">w-[300px]</div>
 
     <!-- Max Width -->
+    <div class="bg-gray-700 text-white max-w-sm mx-auto">
+      max-h-96 max-height: 24rem; /* 384px */ max-h-full max-height: 100%;
+      max-h-screen max-height: 100vh; max-h-min max-height: min-content;
+      max-h-max max-height: max-conte
+    </div>
 
     <!-- Height (Most of the same options as widths) -->
 
+    <div class="flex items-end">
+      <div class="bg-orange-500 w-20 h-24">some</div>
+      <div class="bg-orange-500 w-20 h-32">some</div>
+      <div class="bg-orange-500 w-20 h-40">some</div>
+      <div class="bg-orange-500 w-20 h-48">some</div>
+      <div class="bg-orange-500 w-20 h-64">some</div>
+      <div class="bg-orange-500 w-20 h-96">some</div>
+      <div class="bg-orange-500 w-20 h-96">some</div>
+    </div>
     <!-- Min Height -->
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-blue-500 w-20 h-screen">h-screen</div>
   </body>
 </html>
 
