--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,62 @@
   </head>
   <body>
     <!-- Background Classes -->
-
+    <div
+      class="h-64 w-72 bg-no-repeat bg-cover bg-center"
+      style="background-image: url('../assets/img/img1.jpg')"
+    ></div>
     <!-- Gradients -->
+    <div class="h-24 bg-gradient-to-l from-cyan-500 via-blue-500 to-red-500">
+      gradient
+    </div>
 
     <!-- Shadows -->
-
+    <div class="w-96 mt-6 p-3 shadow">
+      <h1>SHADOW</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
+    <div class="w-96 mt-6 p-3 shadow-md">
+      <h1>SHADOW MD</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
+    <div class="w-96 mt-6 p-3 shadow-lg">
+      <h1>SHADOW LG</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
+    <div class="w-96 mt-6 p-3 shadow-xl">
+      <h1>SHADOW XL</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
+    <div class="w-96 mt-6 p-3 shadow-2xl shadow-blue-500/50">
+      <h1>SHADOW 2XL</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
+    <div class="w-96 mt-6 p-3 shadow-inner shadow-red-300">
+      <h1>SHADOW Inner</h1>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet veniam
+      minus dolorem. Commodi veniam assumenda eligendi dignissimos perferendis
+      amet modi tempore eaque laudantium cum.
+    </div>
     <!-- Mix Blend -->
+    <div class="flex justify-center -space-x-24">
+      Mix blend clex justify-center
+      <div class="mix-blend-multiply bg-blue-400">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, ea?
+      </div>
+      <div class="mix-blend-multiply bg-pink-400">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quibusdam.
+      </div>
+    </div>
   </body>
 </html>
 
