--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -9,25 +9,138 @@
   </head>
   <body>
     <!-- Hover State Styling -->
-
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 hover:bg-orange-500 hover:text-green-400"
+    >
+      Submit
+    </button>
     <!-- Focus State Styling -->
-
+    <button
+      class="bg-blue-500 text-red-300 py-3 px-5 rounded-lg m-3 focus:bg-green-500 focus:text-blue-500"
+    >
+      Submit
+    </button>
     <!-- Active State Styling -->
+    <button
+      class="bg-black text-red-300 py-3 px-5 rounded-lg m-3 active:bg-green-500 active:text-blue-500"
+    >
+      Submit
+    </button>
 
     <!-- Styling based on parent state -->
+    <a
+      href=""
+      class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-6 hover:bg-sky-500"
+      ><h3 class="group-hover:text-white">Card Title</h3>
+      <p>This is card text</p></a
+    >
+    <a
+      href=""
+      class="group hover:text-white block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-6 hover:bg-sky-500"
+      ><h3>Card Title</h3>
+      <p>This is card text</p></a
+    >
 
     <!-- Pseudo Classes -->
-
+    <ul>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 1
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 2
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 3
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 4
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 5
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 6
+      </li>
+    </ul>
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
-
+    <select class="appearance-none">
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select>
     <!-- Cursor -->
+    <button
+      class="cursor-not-allowed bg-black text-red-300 py-3 px-5 rounded-lg m-3 active:bg-green-500 active:text-blue-500"
+    >
+      Submit
+    </button>
+
+    <p class="cursor-pointer">Cursor pointer</p>
 
     <!-- Resize -->
 
     <!-- User Select -->
 
+    <div class="select-none">Lorem ipsum dolor sit amet.</div>
+    <div class="select-text">Lorem ipsum dolor sit amet.</div>
+    <div class="select-all">Lorem ipsum dolor sit amet.</div>
+    <div class="select-auto">Lorem ipsum dolor sit amet.</div>
+
+    <a href="#item" class="block my-6">Go to Item</a>
     <!-- Smooth Scroll Example -->
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore eum
+      accusantium dolor ipsa blanditiis deleniti nemo, aliquid ex labore quod
+      quas deserunt dicta culpa dolore numquam ab molestias molestiae magnam
+      pariatur tenetur provident laudantium doloremque quam eveniet. Delectus
+      facilis impedit necessitatibus soluta ullam id sapiente neque veniam,
+      eius, odit amet, ducimus ad fuga ex similique nesciunt molestiae quod
+      officiis rem quaerat aut saepe exercitationem! Hic deleniti dolor adipisci
+      explicabo, error tempore facere, nam nihil ratione nobis ex rerum, non
+      voluptatibus repellendus aperiam ullam vel delectus. Sunt accusantium
+      voluptates accusamus in ab doloremque culpa mollitia ex minima, recusandae
+      quaerat necessitatibus animi quod dolorum. Qui eum, mollitia reiciendis
+      ipsa facilis minima id quibusdam deserunt provident eius iste consectetur
+      ipsum dignissimos, eligendi, adipisci atque sed? Fugiat similique quas
+      commodi tempora nemo officia iusto, nesciunt quae assumenda cum. Eos quam,
+      doloremque atque aspernatur officia maxime tenetur, accusantium nobis
+      nihil itaque tempore consequatur, repellendus excepturi ut laborum eveniet
+      cum culpa veritatis. Vero, quisquam accusantium? Doloribus cum corporis
+      similique illo obcaecati. Fuga adipisci quos voluptatem facere iusto autem
+      hic voluptate iure, placeat similique ducimus nihil obcaecati.
+      Consequuntur nemo veniam, sunt aspernatur nisi ratione nobis vero optio
+      esse recusandae error voluptas alias sapiente tenetur modi ad harum qui
+      autem debitis. Laboriosam nihil ut pariatur a aliquam voluptatum labore.
+      Earum perferendis nesciunt laborum, dolore doloremque odio veniam, unde
+      minus, porro nemo officia magni eum voluptas nisi. Cum nulla numquam
+      consequatur ipsa repellat officiis, repudiandae in exercitationem,
+      perspiciatis quae non doloribus velit laboriosam? Odit maxime inventore
+      cum, harum sit fuga? Sequi magni rerum omnis praesentium illum laboriosam?
+      Fugit cupiditate voluptas obcaecati dignissimos ipsum nihil excepturi non
+      debitis enim nam, hic, rerum voluptatibus beatae soluta eveniet quasi esse
+      sunt facilis praesentium dicta! Eius impedit eligendi, architecto odit
+      commodi eum sapiente numquam quisquam vero aliquam magni sequi veritatis
+      similique! Ea ad veniam distinctio. Veritatis culpa inventore fugit,
+      consequuntur optio aspernatur adipisci eos corporis nesciunt. Hic,
+      deserunt. Possimus doloribus necessitatibus minus praesentium molestiae
+      delectus dolores ad consequuntur optio! Id, libero! Aliquid, officiis
+      ratione. Id, dolorum vero. Sapiente similique repudiandae alias laboriosam
+      dolore adipisci est voluptas aliquid corrupti, ipsam facere, accusantium
+      voluptatibus, temporibus perferendis reprehenderit amet dolores asperiores
+      a. Delectus dolore repellat similique ut quisquam quae deserunt nisi
+      dolores sapiente! Libero ullam dicta ut est autem soluta officia obcaecati
+      quis. Rem consequatur accusantium rerum sunt, mollitia earum, at sed
+      consequuntur ullam labore necessitatibus veritatis. Magnam et sapiente ad,
+      ea vero libero corporis alias?
+    </p>
+    <div id="item" class="bg-blue-500">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse hic enim
+      eius, quisquam fugiat veniam facilis commodi, labore saepe nostrum fugit
+      vel explicabo dicta quo aliquid. Possimus perspiciatis dolorem voluptatem
+      saepe. Commodi, nesciunt. Alias quasi ad odio deserunt quidem, omnis quos
+      obcaecati rerum earum temporibus officiis. Aspernatur error assumenda
+      magnam?
+    </div>
   </body>
 </html>
 
