--- a/12-columns/index.html
+++ b/12-columns/index.html
@@ -9,8 +9,25 @@
   </head>
   <body>
     <!-- Columns -->
-
+    <div class="columns-6 gap-1">
+      <img src="../assets/img/img6.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img1.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img2.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img7.jpg" alt="" class="w-full" />
+    </div>
+    <div class="columns-xs gap-1">
+      <img src="../assets/img/img6.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img1.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img2.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img7.jpg" alt="" class="w-full" />
+    </div>
     <!-- Aspect Ratio -->
+    <div class="columns-4 gap-1">
+      <img src="../assets/img/img6.jpg" alt="" class="w-full aspect-video" />
+      <img src="../assets/img/img1.jpg" alt="" class="w-full aspect-square" />
+      <img src="../assets/img/img2.jpg" alt="" class="w-full" />
+      <img src="../assets/img/img7.jpg" alt="" class="w-full" />
+    </div>
   </body>
 </html>
 
