--- a/14-grid/index.html
+++ b/14-grid/index.html
@@ -9,7 +9,25 @@
   </head>
   <body>
     <!-- Grid cols and rows -->
-
+    <div class="grid grid-cols-1 md:grid-cols-3">
+      <div
+        class="p-10 md:col-span-2 row-span-3 border border-blue-600 bg-blue-200"
+      >
+        Sevgi 1
+      </div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 2</div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 3</div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 4</div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 5</div>
+      <div class="p-10 md:col-span-2 border border-blue-600 bg-blue-200">
+        Sevgi 6
+      </div>
+      <div class="p-10 md:col-span-2 border border-blue-600 bg-blue-200">
+        Sevgi 7
+      </div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 8</div>
+      <div class="p-10 border border-blue-600 bg-blue-200">Sevgi 9</div>
+    </div>
     <!-- Col and row span -->
   </body>
 </html>
