--- a/15-transform-transition/index.html
+++ b/15-transform-transition/index.html
@@ -16,9 +16,24 @@
     </button>
 
     <!-- Transition -->
+    <button
+      class="px-8 py-2 m-24 text-white bg-blue-500 rounded hover:bg-blue-700 hover:opacity-20 transition-opacity transition-duration-2000"
+    >
+      Click me
+    </button>
 
     <!-- Transition & Transform -->
+    <button
+      class="hover:rotate-12 transation-transform duration-1000 py-2 m-24 text-white bg-blue-500 rounded hover:bg-blue-700"
+    >
+      Click me
+    </button>
 
+    <img
+      src="../assets/img/img9.jpg"
+      alt=""
+      class="w-48 hover:rotate-180 hover:scale-75 hover:skew-x-12 duration-1000"
+    />
     <!-- Transform & Transition -->
   </body>
 </html>
